# nu_plugin_dbg

./: Cargo.toml  README.md
src/: dbg.rs  main.rs  table.rs
