[package]
name = "nu_plugin_dbg"
version = "0.0.1"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_dbg"
description = "a nushell plugin called dbg"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nu-plugin = "^0.73"
# nu-protocol = "^0.73"
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.74.1"}
nu-protocol = { path = "../nushell/crates/nu-protocol", version="0.74.1"}
