[package]
name = "nu_plugin_dbg"
version = "0.0.1"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_dbg"
description = "a nushell plugin called dbg"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = { path = "../nushell/crates/nu-plugin", version = "0.75.1"}
nu-protocol = { path = "../nushell/crates/nu-protocol", version="0.75.1"}
nu-engine = { path = "../nushell/crates/nu-engine", version = "0.75.1"}
terminal_size = "0.2.3"
tabled = "0.10.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]